A collection compares its elements with their own `equals`, and `Set.of` refuses a repeat
`contains`/`indexOf`/`lastIndexOf`/`remove(Object)`/`List.equals`, `Set`
de-duplication (`add`, `addAll`, `Set.of`, `new HashSet<>(seq)`), and
`Map.get`/`getOrDefault`/`containsKey`/`containsValue`/`put`/`putIfAbsent`/
`remove` all consulted javars's value model, which is reference identity for a
heap handle. So `list.contains(new R(1))` on a `record` answered `false` where
Java answers `true`, `indexOf` was `-1` against `0`, a `HashSet` of two equal
records had size 2, and `map.get(new R(1))` was `null`. A direct
`p.equals(q)` was already exact — the compiler dispatches it on the receiver's
runtime class — so the gap was specifically the comparison the collection
performs internally, in the host, where the element is a bare handle.

That was declined at a previous round tail as "a host-side comparison with no
call site to hang dispatch on", and the `JSTRINGIFY` work since then shows why
that was the wrong conclusion: a `BuiltinHandler` holds `&mut VM` and can
re-enter it. What it cannot do is re-enter while holding a borrow of the heap
slab, because a user body reads its own fields and may allocate. So `eq_plan`
resolves the comparisons BEFORE the borrow `coll_method` takes — exactly where
`sort`, `forEach` and `toString` already run their user code — and the borrowed
section consumes a plain index. A program that declares no `equals` never
builds a plan and keeps the code path it always had, gated on one flag read.

Four details are Java's, not conveniences:

  * The RECEIVER is the query, not the element. `ArrayList.indexOf(o)` runs
    `o.equals(element)` and `HashMap.getNode` runs `key.equals(storedKey)`, so
    an asymmetric `equals` answers here as it does there. `AbstractList.equals`
    is the exception and uses this list's element, which is what it does too.
  * The scan STOPS AT THE FIRST HIT, in the direction the method scans. A body
    with a side effect therefore